# walker

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json
.kiro/specs/walker-improvements/: design.md  requirements.md  task-13.2-summary.md  tasks.md
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: cli.rs  default_config.toml  file.rs  mod.rs  parser.rs  settings.rs  tests.rs
src/core/: analyzer.rs  ast_walker.rs  cache.rs  mod.rs  parallel.rs  parallel_walker.rs  parallel_walker_test.rs  streaming.rs  walker.rs
src/error/: context.rs  mod.rs  tests.rs  types.rs
src/examples/: progress_example.rs
src/models/: analysis.rs  ast.rs  config.rs  dependency_graph.rs  file_metadata.rs  mod.rs  package.rs
src/output/: formatters.rs  mod.rs  progress.rs  tests.rs  writers.rs
src/parsers/: ast_parser.rs  dependency_graph_builder.rs  exports.rs  mod.rs  module_detector.rs  package_json.rs
src/utils/: mod.rs  path_resolver.rs
tests/: integration_tests.rs
tests/fixtures/: generate_large_project.rs
tests/integration/: README.md  backward_compatibility_test.rs  benchmark_test.rs  cli_test.rs  end_to_end_test.rs  output_test.rs  performance_test.rs  regression_test.rs  walker_test.rs
tests/unit/config/: parser_test.rs  settings_test.rs
tests/unit/parsers/: exports_test.rs  package_json_test.rs
