[package]
name = "walker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Existing dependencies
serde_json = "1.0.113"
ansi_term = "0.12"

# New dependencies for enhanced functionality
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
rayon = "1.7"
indicatif = "0.17"
walkdir = "2.3"
glob = "0.3"
csv = "1.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
